external-crates/move/crates/move-compiler/tests/move_check/parser/less_than_space.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/parser/less_than_space.move:5:13
  │
2 │     fun f(v: u64): u64 {
  │              --- Given: 'u64'
  ·
5 │         if (v< 10) return v;
  │             ^^^^^^^^^^^^^^^
  │             │
  │             Invalid if condition
  │             Expected: 'bool'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:16
  │
5 │         if (v< 10) return v;
  │                ^^ Expected '::' after the anonymous address in this module access chain

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:28
  │
5 │         if (v< 10) return v;
  │              -             ^ Expected '>'
  │              │              
  │              To match this '<'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:28
  │
5 │         if (v< 10) return v;
  │                            ^
  │                            │
  │                            Unexpected ';'
  │                            Expected ')'
